--- a/TheOdinJsFoundamentals/README
+++ b/TheOdinJsFoundamentals/README
@@ -1,1 +1,9 @@
+-This repository has 4 folders each of them are progress of my js skills 
+-Last one folder is my project from Js Foundamental called RockPaperScissors
 
+ROCK PAPER SCISSORS
+
+It's a mini program that allows you to play rockpaperscissors !
+You just enter pick your option and play against computer.
+
+Tomás-
